--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   card_swiper: ^2.0.1
   page_indicator: ^0.4.1
+  readmore: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
     - assets/images/Logo-only-new.png
     - assets/images/carbon-dioxide.png
     - assets/images/social-media.png
+    - assets/images/proof-reading.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
