--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -79,11 +79,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Prompt
+      fonts:
+        - asset: assets/fonts/Prompt-Italic.ttf
+        - asset: assets/fonts/Prompt-Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
