--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   readmore: ^2.1.0
   flutter_launcher_icons: ^0.9.2
 
-
 flutter_icons:
   android: true
   image_path: "logo/Logo-only-new.png"
@@ -72,6 +71,7 @@ flutter:
     - assets/images/carbon-dioxide.png
     - assets/images/social-media.png
     - assets/images/proof-reading.png
+    - assets/images/google-maps.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
